Fix bug with replies overflow

--- a/src/css/mixins/thread-default.less
+++ b/src/css/mixins/thread-default.less
@@ -57,6 +57,7 @@
         border: 1px solid #d2d2d2;
         border: 1px solid rgba(0,0,0,0.15);
         border-top: none;
+        overflow: overlay;
     }
 
     .lf-thread-replies [data-thread-nest-level='1'] > .lf-thread-root-content {
